// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post renders Post correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="rounded-md bg-white shadow"
  >
    <div
      class="flex justify-between px-5 py-4"
    >
      <div
        class="w-0 flex-1"
      >
        <div
          class="mt-1 max-h-40 text-xs text-gray-500"
        >
          <div
            class="flex flex-row"
          >
            <span
              class="relative flex shrink-0 overflow-hidden rounded-full h-12 w-12 border-2 border-pri"
            >
              <div
                class="relative aspect-square h-full w-full"
              >
                <img
                  alt="Profile Picture"
                  data-nimg="fill"
                  decoding="async"
                  fetchpriority="high"
                  referrerpolicy="no-referrer"
                  sizes="100vw"
                  src="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </span>
            <div
              class="ml-4"
            >
              <div
                class="flex items-center text-lg font-bold text-gray-900"
              >
                <a
                  class="hover:underline"
                  href="/profile/user1"
                >
                  John Doe
                </a>
                <span
                  class="px-1"
                >
                  •
                </span>
                <a
                  class="text-sm text-pri underline underline-offset-2"
                  href="/groups/1"
                >
                  1
                </a>
              </div>
              1y ago
            </div>
          </div>
        </div>
        <a
          href="/groups/1/post/post1"
        >
          <h1
            class="py-2 text-lg font-semibold leading-6 text-gray-900"
          >
            Example Post Title
          </h1>
        </a>
        <div
          class="relative max-h-40 w-full overflow-clip text-sm"
        />
      </div>
      <div
        class="flex items-start justify-center"
      >
        <div
          class="flex flex-row sm:pl-6 sm:w-12 sm:flex sm:flex-col sm:gap-0 sm:pb-0 justify-center items-center"
        >
          <button
            aria-label="UPVOTE"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
          >
            <svg
              class="lucide lucide-arrow-big-up h-5 w-5 text-zinc-700 hover:bg-sec"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 18v-6H5l7-7 7 7h-4v6H9z"
              />
            </svg>
          </button>
          <p
            class="m-0 sm:mr-0 py-2 text-center text-sm font-medium text-zinc-900"
          >
            1
          </p>
          <button
            aria-label="DOWNVOTE"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
          >
            <svg
              class="lucide lucide-arrow-big-down h-5 w-5 text-zinc-700 hover:bg-sec"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 6v6h4l-7 7-7-7h4V6h6z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="z-20 bg-sec px-4 py-4 text-sm sm:px-6"
    >
      <a
        class="flex w-fit items-center gap-2"
        href="/groups/1/post/post1"
      >
        <svg
          class="lucide lucide-message-square-text h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
          />
          <path
            d="M13 8H7"
          />
          <path
            d="M17 12H7"
          />
        </svg>
        1 comments
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Post renders PostVote correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row sm:pl-6 sm:w-12 sm:flex sm:flex-col sm:gap-0 sm:pb-0 justify-center items-center"
  >
    <button
      aria-label="UPVOTE"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
    >
      <svg
        class="lucide lucide-arrow-big-up h-5 w-5 text-zinc-700 hover:bg-sec"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 18v-6H5l7-7 7 7h-4v6H9z"
        />
      </svg>
    </button>
    <p
      class="m-0 sm:mr-0 py-2 text-center text-sm font-medium text-zinc-900"
    >
      1
    </p>
    <button
      aria-label="DOWNVOTE"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
    >
      <svg
        class="lucide lucide-arrow-big-down h-5 w-5 text-zinc-700 hover:bg-sec"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 6v6h4l-7 7-7-7h4V6h6z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
